# realitycoin

./: Anchor.toml  README.md  package.json  render.yaml
app/: config-overrides.js  package-lock.json  package.json  program.ts
app/src/: App.tsx  programClient.ts
preview_canvas/: .env.example  package.json
preview_canvas/src/: App.tsx  AreaSelector.tsx  GeocoderControl.tsx  InfoPanel.tsx  MapView.tsx
preview_canvas/src/state/: mapSlice.ts  persist.ts  recalculateStats.ts  settingsSlice.ts  store.ts
programs/realitycoin_consensus/src/: lib.rs  state.rs
public/: index.html
scripts/: run-locally.sh
src/: MapView.tsx
tests/: program_tests.ts  realitycoin_consensus.ts
validator_consensus/: Anchor.toml  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
validator_consensus/app/: package.json
validator_consensus/app/src/: App.tsx  programClient.ts
validator_consensus/programs/realitycoin_consensus/: Cargo.toml
validator_consensus/programs/realitycoin_consensus/src/: state.rs
validator_consensus/tests/: program.test.ts
world_server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mikro-orm.config.ts  package.json  tsconfig.json
world_server/migrations/: .snapshot-world_server.json  Migration20220507082923.ts  Migration20220507101420.ts  Migration20220507191305.ts  Migration20220509124639.ts
world_server/src/: app.module.ts  mikro-orm.config.ts  schema.gql
world_server/src/collections/: block.entity.ts  collection.entity.ts  collections.module.ts  collections.resolver.spec.ts  (+3 more)
world_server/test/: db.ts
(+4 files in other folders)
